--- a/style.css
+++ b/style.css
@@ -7,11 +7,34 @@ body {
     color: #003977;
 }
 
-/*.zone {
-    border-radius:4px;
-    border:1px solid #bbb;
-    transition: all 0.3s linear;
-}*/
+/*SUCCESS GIF*/
+#bg{
+    position: fixed;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+}
+
+#bg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%;
+}
+
+.overlay{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+}
 
 
 /* NAV */
