landing page fix

--- a/style.css
+++ b/style.css
@@ -8,23 +8,12 @@ body {
 }
 
 /*SUCCESS GIF*/
-#bg{
-    position: fixed;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-}
-
-#bg img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    min-width: 50%;
-    min-height: 50%;
+.success {
+    background: url(images/Boiler.gif) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .overlay{
@@ -34,6 +23,7 @@ body {
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
+    text-transform: uppercase;
 }
 
 
