--- a/style.css
+++ b/style.css
@@ -270,19 +270,18 @@ hr {
 
 .overlay{
     position: absolute;
-    top: 50%;
+    bottom: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    text-align: right !important;
+    text-align: center;
     text-transform: uppercase;
 }
 
-@media (max-device-width: 600px) {
-    .overlay {
-        text-align: center !important;
-    }
+#title {
+    font-size: 1.5rem;
+}
 
-#title, #subt {
-    font-weight: bold;
+#subt {
+    font-size: 1.2rem;
 }
