--- a/style.css
+++ b/style.css
@@ -278,10 +278,12 @@ hr {
     text-transform: uppercase;
 }
 
+
 #title {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    font-weight: bold;
 }
 
 #subt {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
